fdo#85562: sw: fix crash on insert of input field and set variable field

When a new field is inserted it doesn't have a SwFmtFld yet and it is
also not yet in the document so it is not necessary to listen for its
deletion.

(regression from bbd97fe57d9ec184ef6aee36bd57d6d7e53b4719)

Change-Id: I23c18aa8c490a6ad1de63a33f87679cc2358d7f5